# pytailor

./: .gitignore  404.html  CHANGES.md  README.md  index.html  mkdocs.yml  noxfile.py  openapi.json  pyproject.toml  sitemap.xml
docs/: index.md
examples/: example01_hello_world.py  example01_hello_world_alt_syntax1.py  example01_hello_world_alt_syntax2.py  example02_kwargs.py  example03_inputs.py  example03_inputs_parameterization.py  example04_outputs.py  example04_outputs_parameterization.py  example05_files.py  example05_files_parameterization.py  example06_branch_task.py  example06_branch_task_parameterization.py  example06_duplicate_task.py  example06_duplicate_task_2.py  example06_duplicate_task_3.py  example06_duplicate_task_4.py  example07_branch_dag.py  example07_branch_dag_parameterization.py  example07_duplicate_dag.py  example07_duplicate_dag_2.py  example08_add_workflow_definition.py  example08_duplicate_args_query.py  example09_add_workflow_definition.py  example09_duplicate_kwargs_1.py  example10_duplicate_kwargs_2.py  example11_duplicate_kwargs_query.py  example11_nested_queries.py  example12_branch_two_file_lists.py  example_10_add_definition_from_workflow.py  example_add_workflow_definition.py  example_add_workflow_definition2.py  run_all_examples.py
search/: search_index.json
tailor/: __init__.py  config.py  models.py  serializable.py  utils.py
test_scripts/: README  engineering_tasks.py  run_all_test_scripts.py  run_test_scripts_direct.py  run_test_scripts_distributed.py  test_2level_branching.py  test_branching_performance.py  test_definition_from_workflow.py  test_engineering_example.py  test_many_branches.py  test_minimal.py  (+5 more)
(+165 files in other folders)
