[tool.poetry]
name = "tailor"
version = "0.1.0"
description = ""
authors = ["Audun Gravdal Johansen <audun@entail.no>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.3"
click = "^7.1.2"
toml = "^0.10.1"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs-material = "^5.5.3"
datamodel-code-generator = "^0.5.24"
pymdown-extensions = "^8.0"
pygments = "^2.6.1"
markdown = "^3.2.2"
mkautodoc = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
