[tool.poetry]
name = "tailor"
version = "0.1.0"
description = ""
authors = ["Audun Gravdal Johansen <audun@entail.no>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.14.2"
click = "^7.1.2"
toml = "^0.10.1"
pydantic = "^1.5.1"
yaql = "^1.1.3"

[tool.poetry.dev-dependencies]
datamodel-code-generator = "^0.5.31"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest_httpx = "^0.8.0"
mkdocs-material = "^5.5.3"
pymdown-extensions = "^8.0"
pygments = "^2.6.1"
markdown = "^3.2.2"
mkautodoc = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tailor = 'tailor.cli.main:cli'
